--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,28 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg p-2 navbar-fixed-top">
+      <%= link_to lists_path, class: "navbar-brand" do %>
+        <span id="movie-logo"><i class="fa-solid fa-compact-disc"></i> WATCHIT</span>
+      <% end %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="movie-nav active">
+            <%= link_to "Home", lists_path, class: "nav-link" %>
+          </li>
+          <li class="movie-nav">
+            <%= link_to 'Add watchlist', new_list_path, class: "nav-link" %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container m-0 p-0" id="fixed-navbar-container">
+      <%= yield %>
+    </div>
   </body>
 </html>
