--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,34 @@
-<h1>Show list - <%= @list.name %></h1>
-<h2>Movies are</h2>
-<ul>
-  <% @list.movies.each do |movie| %>
-    <li><%= movie.title %></li>
-  <% end %>
-</ul>
+<div id="show-container">
+  <div class="show-banner">
+    <div>
+      <h1><%= @list.name %></h1>
+      <h2><%= render 'lists/movie_count', list: @list %></h2>
+    </div>
+  </div>
+
+  <div class="btn-container movie">
+    <%= link_to new_list_bookmark_path(@list), class: "btn-add-new" do %>
+      <p><i class="fa-solid fa-film"></i> Add movie </p>
+    <% end %>
+  </div>
+
+  <div class="movie-grid">
+
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.where(movie: movie, list: @list).first # Returns array of length 1 so taking first element %>
+
+      <div class="movie-card">
+        <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie.poster_url}", alt: "Movie poster", class: "movie-card-image" %>
+        <div class="movie-card-content">
+          <h2><%=movie.title%></h2>
+          <p><span class="movie-header">Overview </span><span class="movie-text"><%=movie.overview%></span></p>
+          <p><span class="movie-header">Rating </span><span class="movie-text"><%=movie.rating%></span></p>
+          <p><span class="movie-header">Note </span><span class="movie-text"><%=bookmark.comment%></span></p>
+        </div>
+        <%= link_to bookmark_path(bookmark.id), data: {turbo_method: :delete, turbo_confirm: "Remove movie?"} do %>
+          <p><i class="fa-solid fa-trash"></i></p>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
