--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -34,7 +34,14 @@
 
   <div class="reviews-container">
     <div class="reviews-show">
-      <p>Show reviews here.</p>
+      <h2>Reviews</h2>
+      <% if @reviews.length.zero? %>
+        <p>Show reviews here.</p>
+      <% else %>
+        <% @reviews.each do |review| %>
+          <%= render 'reviews/review', review: review %>
+        <% end %>
+      <% end %>
     </div>
     <div class="reviews-new">
       <h2>Add your review</h2>
