--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="movie-nav active">
-            <%= link_to "Home", lists_path, class: "nav-link" %>
+            <%= link_to 'Home', lists_path, class: "nav-link" %>
+          </li>
+          <li class="movie-nav">
+            <%= link_to 'Movie Collection', lists_path, class: "nav-link" %>
           </li>
           <li class="movie-nav">
             <%= link_to 'Add watchlist', new_list_path, class: "nav-link" %>
