--- a/app/assets/stylesheets/pages/_movies.scss
+++ b/app/assets/stylesheets/pages/_movies.scss
@@ -36,11 +36,18 @@
   }
 }
 
-.movie-grid {
+#movie-grid {
   width: 80%;
   margin: 10px auto;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 8px;
+
+  .poster {
+    width: 30%;
+    height: auto;
+    object-fit: fill;
+    box-shadow: 0 2px 3px 2px grey;
+  }
 }
