--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,5 @@
 <div id="show-container">
-  <div class="show-banner">
+  <div class="show-banner new-movie">
     <div>
       <h1><%= @list.name %></h1>
     </div>
@@ -19,4 +19,3 @@
   </div>
 <% end %>
 </div>
-
