--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,10 @@
 <%= simple_form_for(list) do |f| %>
   <%= f.input :name %>
-  <%= f.submit %>
+  <%= f.input :photo, label: "List image", as: :file %>
+  <div class="btn-center">
+      <%# <%= f.button :submit %>
+      <%= button_tag(type: 'submit') do %>
+        <span><i class="fa-solid fa-clapperboard"></i>  Add list</span>
+      <% end %>
+    </div>
 <% end %>
