--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,12 @@
-<div>
-  <h1>Add new list</h1>
-  <%= render 'lists/form', list: @list %>
+<div id="show-container">
+  <div class="show-banner new-list">
+    <div>
+      <h1>New Watchlist</h1>
+    </div>
+  </div>
+
+  <div id="movie-form">
+    <h2>Create new watchlist</h2>
+    <%= render 'lists/form', list: @list %>
+  </div>
 </div>
