Updated movies/search to include a button for each movie by which it can be added to the Movies table (db)

--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,16 +1,18 @@
 <div id="movie-container" data-controller="movie-search">
   <div class="movie-banner search">
-    <h1>Find Movies</h1>
-  </div>
-  <form id="search-movies">
-    <div class="form-group">
-      <label for="movie-name" class="form-label">Enter a movie name</label>
-      <div class="d-flex">
-        <input type="text" id="movie-name" class="form-control" placeholder="The Shawshank Redemption, The Godfather..." data-movie-search-target="movie">
-        <input type="submit" value="Search" class="btn btn-primary ms-2" data-action='movie-search#search'>
-      </div>
+    <div class="movie-banner-content">
+      <h1>Find Movies</h1>
+      <form id="search-movies">
+        <div class="form-group">
+          <div class="d-flex">
+            <input type="text" id="movie-name" class="form-control" placeholder="Enter movie title for search..." data-movie-search-target="movie">
+            <input type="submit" value="Search" class="btn btn-primary ms-2" data-action='click->movie-search#search'>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
+  </div>
+
   <div id="movie-grid" data-movie-search-target="grid">
   </div>
 
