--- a/app/assets/stylesheets/pages/_movies.scss
+++ b/app/assets/stylesheets/pages/_movies.scss
@@ -26,9 +26,18 @@
   }
 }
 
-#search-movies {
+.movie-banner-content {
+  height: 100%;
   width: 60%;
-  margin: 10px auto;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+#search-movies {
+  margin-top: 7%;
+  margin-bottom: 20%;
 
   .form-label {
     width: 100%;
