--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg p-2 navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg p-2">
       <%= link_to lists_path, class: "navbar-brand" do %>
         <span id="movie-logo"><i class="fa-solid fa-compact-disc"></i> WATCHIT</span>
       <% end %>
