--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,5 +1,5 @@
 <div class="movie-card">
-  <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie.poster_url}", alt: "Movie poster", class: "movie-card-image" %>
+  <%= image_tag movie.poster_url, alt: "Movie poster", class: "movie-card-image" %>
   <div class="movie-card-content">
     <h2><%=movie.title%></h2>
     <p><span class="movie-header">Overview </span><span class="movie-text"><%=movie.overview%></span></p>
