--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="btn-container movie">
     <%= link_to new_list_path, class: "btn-add-new" do %>
-      <p><i class="fa-solid fa-table-list"></i> Add list </p>
+      <p><i class="fa-solid fa-table-list"></i> Create new list </p>
     <% end %>
   </div>
   <div class="movie-grid">
